<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/navajowhite"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenido1"
        android:textColor="@color/brown"
        android:gravity="center"
        android:textSize="25sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenido2"
        android:textColor="@color/brown"
        android:gravity="center"
        android:textSize="25sp" />
    <ImageView
        android:layout_width="142dp"
        android:layout_height="164dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ingrese1"
        android:textColor="@color/brown"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eName"
        android:textColorHint="@color/brown"
        android:hint="@string/Nombre1"
        android:textColor="@color/brown"
        android:inputType="text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/brown"
        android:hint="@string/Ingrese2"
        android:textSize="20sp"
        android:enabled="false" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eContraseña"
        android:hint="@string/Contraseña1"
        android:textColorHint="@color/brown"
        android:textColor="@color/brown"
        android:inputType="textPassword" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Aceptar1"
        android:layout_gravity="center"
        android:id="@+id/bAcepto"
        android:textColor="@color/white"
        android:background="@color/brown" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registrarse1"
        android:layout_gravity="center"
        android:id="@+id/bRegistro"
        android:textColor="@color/white"
        android:background="@color/brown"
        android:layout_marginTop="5sp"
        />
</LinearLayout>
