<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alejandrablandon.crepeswaffles.LogginActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo2"
        android:textSize="30sp"
        android:layout_marginLeft="25sp"
        android:textColor="@color/brown"
        />
    <ImageView
        android:layout_width="146dp"
        android:layout_height="167dp"
        android:src="@drawable/usuaria"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Usuario2"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/brown"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Usuario1"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="2sp"
        android:textColor="@color/brown"
        android:id="@+id/tUsuario"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contraseña3"
        android:layout_marginTop="10sp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/brown"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contraseña1"
        android:textSize="20sp"
        android:layout_marginTop="2sp"
        android:layout_gravity="center"
        android:textColor="@color/brown"
        android:id="@+id/tContrasena"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Correo3"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:textColor="@color/brown"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Correo1"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="2sp"
        android:textColor="@color/brown"
        android:id="@+id/tCorreo"
        />

</LinearLayout>