<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/navajowhite"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Titulo"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/brown"
        />
    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ingrese1"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />
    -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Usuario1"
        android:id="@+id/eNombre"
        android:inputType="text"
        android:textColorHint="@color/brown"
        android:textColor="@color/brown"
        android:layout_marginTop="25sp"
        android:gravity="center" />
    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ingrese2"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
        -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Contraseña1"
        android:id="@+id/eContraseña1"
        android:inputType="textPassword"
        android:textColorHint="@color/brown"
        android:textColor="@color/brown"
        android:gravity="center"
        android:layout_marginTop="2sp" />
    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contraseña2"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
        -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Contraseña4"
        android:id="@+id/eContraseña2"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColorHint="@color/brown"
        android:textColor="@color/brown"
        android:layout_marginTop="2sp" />
    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Correo2"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
        -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Correo1"
        android:id="@+id/eCorreo"
        android:textColorHint="@color/brown"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:layout_marginTop="2sp"
        android:textColor="@color/brown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Aceptar1"
        android:id="@+id/bAceptar"
        android:layout_marginTop="25sp"
        android:layout_gravity="center"
        android:background="@color/brown"
        android:textColor="@color/white" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancelar1"
        android:layout_marginTop="5sp"
        android:id="@+id/bCancelar"
        android:layout_gravity="center"
        android:background="@color/brown"
        android:textColor="@color/white" />

</LinearLayout>
