<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/navajowhite"
    tools:context="com.alejandrablandon.crepeswaffles.BebidasFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bebidas"
        android:textSize="30sp"
        android:textColor="@color/brown"
        android:layout_marginTop="10sp"
        android:gravity="center"/>
    <ImageView
        android:layout_width="192dp"
        android:layout_height="225dp"
        android:src="@drawable/bebida1"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Texto1Bebida1"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/brown"
        android:layout_marginTop="5sp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Texto2Bebida1"
        android:textSize="15sp"
        android:textColor="@color/brown"
        android:layout_marginTop="5sp"
        android:gravity="center"/>

</LinearLayout>
